--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dependencies": {
         "commander": "^12.0.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "joi": "^17.11.0",
+        "mongoose": "^8.3.4",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
